# operonAI-UI-Navigator

./: .dockerignore  README.md  cloudbuild.yaml
client/: index.html  package-lock.json  package.json
client/src/: index.css  main.tsx  router.tsx
client/src/components/: background-lines-demo.tsx  dashboard-layout.tsx
client/src/components/ui/: background-lines.tsx  the-infinite-grid.tsx
client/src/hooks/: use-auth.ts  use-dashboard-socket.ts  use-voice-socket.ts
client/src/lib/: api.ts
client/src/pages/: devices.tsx  landing.tsx  login.tsx  navigate.tsx  session-detail.tsx  sessions.tsx  signup.tsx  systems.tsx  voice.tsx
client/src/types/: index.ts
local-helper/: README.md  build.bat  build.sh  main.py  pyproject.toml
local-helper/local_helper/: connection.py  gui.py  interpreter.py  screen.py
server/: .dockerignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
server/auth/: __init__.py  jwt_handler.py  user_store.py
server/connections/: __init__.py  manager.py
server/devices/: __init__.py  device_store.py
server/models/: __init__.py  schemas.py
server/navigator_agent/: __init__.py  action_schema.py  agent.py  agent_loop.py  live_agent.py  live_tools.py  perception.py  planner.py  tools.py  verifier.py
server/segmentation/: __init__.py  segmenter.py  service.py
server/sessions/: session_logger.py
server/storage/: gcs.py
terraform/: .gitignore  artifact_registry.tf  cloud_run.tf  cloudbuild.tf  gcs.tf  iam.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf
